# High-Dimensional-Inspector

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
applications/command_line_tools/: CMakeLists.txt  atsne_cmd.cpp  atsne_pva_cmd.cpp  cifar_2_data.cpp  gpgpusne_cmd.cpp  hsne_cmd.cpp  mnist_2_data.cpp  pex_viewer.cpp  simple_embedding_viewer.cpp  timit_2_data.cpp  tsne_cmd.cpp  tsne_distance_matrix_cmd.cpp
applications/command_line_tools/data_conversion/: CMakeLists.txt  bin_2_data.cpp  cifar_2_data.cpp  csv_2_bin.cpp  hyperspectral_image_2_hdvol.cpp  mnist_2_data.cpp  multiple_csv_2_bin.cpp  timit_2_data.cpp
applications/command_line_tools/hsne_volume_analyzer/: CMakeLists.txt  application.cpp  application.h  application.ui  hsne_volume_analyzer.cpp
applications/command_line_tools/waow_visualization/: CMakeLists.txt  application.cpp  application.h  application.ui  hsne_volume_analyzer.cpp  waow_gui.cpp
applications/deep_eyes/: CMakeLists.txt  alexnet_dual.cpp  caffe_classification.cpp  filter_convolution.cpp  mitotic_figures_0.cpp  mitotic_figures_1_dual.cpp  mitotic_figures_1_dual_hdvol.cpp  neurons_tsne.cpp  neurons_wtsne.cpp  neurons_wtsne_vs_tsne.cpp  patch_lsh.cpp  test_buckets.cpp  training_mnist.cpp  world_trade.cpp
applications/deep_eyes/deep_eyes_training/: CMakeLists.txt  application.cpp  application.h  application.qrc  application.stylesheet  application.ui  (+1 more)
applications/tdd/: CMakeLists.txt  tdd.cpp  test_controllers.cpp  test_data.cpp  test_log.cpp  test_map_mem_eff.cpp  test_timings.cpp  test_tsne.cpp  test_utils.cpp
applications/visual_tests/: CMakeLists.txt  branching.cpp  data_viewers.cpp  dl_filter_viz_test.cpp  heatmap_view_test.cpp  histogram_view_test.cpp  histogram_zcent_view_test.cpp  kmeans.cpp  lda_image.cpp  linechart_dual_view_test.cpp  linechart_view_test.cpp  pca_image.cpp  pca_mnist.cpp  pca_weigh_image.cpp  scalable_pcp_view_test.cpp  scatterplot_drawers.cpp  test_bh_sne.cpp  test_bh_sne_vs_exact.cpp  test_sankey_diagram.cpp  test_sankey_diagram_colors.cpp  tsne_line.cpp  wtsne_mnist.cpp  wtsne_mnist_exact_vs_bh.cpp
hdi/analytics/: CMakeLists.txt  hsne_analytics_interfaces_qobj.h  hsne_analytics_system_qobj.cpp  hsne_analytics_system_qobj.h  multiscale_embedder_single_view_qobj.cpp  multiscale_embedder_single_view_qobj.h  multiscale_embedder_system_qobj.cpp  multiscale_embedder_system_qobj.h  std_hsne_analytics_embedder_qobj.cpp  std_hsne_analytics_embedder_qobj.h  waow_vis_qobj.cpp  waow_vis_qobj.h  waow_vis_single_view_embedder_qobj.cpp  waow_vis_single_view_embedder_qobj.h
hdi/clustering/: CMakeLists.txt  kmeans.cpp  kmeans.h  kmeans_inl.h
hdi/data/: CMakeLists.txt  abstract_data.h  abstract_panel_data.h  cluster.h  embedding.cpp  embedding.h  embedding_inl.h  empty_data.h  flow_model.cpp  flow_model.h  flow_model_inl.h  histogram.cpp  histogram.h  histogram_inl.h  image_data.h  io.h  map_helpers.h  map_mem_eff.h  nano_flann.h  panel_data.cpp  panel_data.h  panel_data_inl.h  pixel_data.h  set_intersection_tree.cpp  set_intersection_tree.h  shader.cpp  shader.h  text_data.h  voxel_data.h  vptree.h
hdi/deep_learning/: CMakeLists.txt  cnn.cpp  cnn.h  controller_layer_qobj.cpp  controller_layer_qobj.h  controller_training.cpp  controller_training.h  model_caffe_solver.cpp  model_caffe_solver.h  model_layer.cpp  model_layer.h  model_training.cpp  model_training.h  view_embedding.h  view_layer_detailed_qobj.cpp  view_layer_detailed_qobj.h  view_layer_overview_qobj.cpp  view_layer_overview_qobj.h  view_training.cpp  view_training.h
hdi/dimensionality_reduction/: CMakeLists.txt  embedding_equalizer.cpp  embedding_equalizer.h  embedding_equalizer_inl.h  evaluation.cpp  evaluation.h  evaluation_inl.h  gradient_descent_tsne_texture.cpp  gradient_descent_tsne_texture.h  gradient_descent_tsne_texture_inl.h  hd_joint_probability_generator.cpp  hd_joint_probability_generator.h  hd_joint_probability_generator_inl.h  hierarchical_sne.cpp  hierarchical_sne.h  hierarchical_sne_inl.h  sparse_tsne_user_def_probabilities.cpp  sparse_tsne_user_def_probabilities.h  sparse_tsne_user_def_probabilities_inl.h  sptree.cpp  sptree.h  sptree_inl.h  tsne.cpp  tsne.h  tsne_inl.h  tsne_parameters.h  tsne_random_walks.cpp  tsne_random_walks.h  tsne_random_walks_inl.h  weighted_sptree.cpp  weighted_sptree.h  weighted_sptree_inl.h  wtsne.cpp  wtsne.h  wtsne_inl.h
hdi/utils/: CMakeLists.txt  abstract_log.h  assert_by_exception.h  cout_log.cpp  cout_log.h  dataset_utils.cpp  dataset_utils.h  file_utils.cpp  file_utils.h  glad.cpp  graph_algorithms.cpp  graph_algorithms.h  graph_algorithms_inl.h  log_helper_functions.h  log_progress.cpp  log_progress.h  math_utils.cpp  math_utils.h  math_utils_inl.h  memory_utils.cpp  memory_utils.h  pte_log.cpp  pte_log.h  scoped_timers.h  scoped_timers_inl.h  timers.cpp  timers.h  timing_utils.h  vector_utils.h  visual_utils.cpp  visual_utils.h  visual_utils_inl.h
hdi/visualization/: CMakeLists.txt  abstract_scatterplot_drawer.h  abstract_view.h  anatomical_planes_view_qobj.cpp  anatomical_planes_view_qobj.h  anatomical_planes_view_qobj.ui  controller_embedding_selection_qobj.cpp  controller_embedding_selection_qobj.h  dl_filter_viz_qobj.cpp  dl_filter_viz_qobj.h  dl_filter_viz_qobj.qrc  dockable_widget_qobj.cpp  dockable_widget_qobj.h  embedding_bundled_lines_drawer.cpp  embedding_bundled_lines_drawer.h  embedding_lines_drawer.cpp  embedding_lines_drawer.h  embedding_similarity_bundled_lines_drawer.cpp  embedding_similarity_bundled_lines_drawer.h  heatmap_view_qobj.cpp  heatmap_view_qobj.h  heatmap_view_qobj.qrc  histogram_view_qobj.cpp  histogram_view_qobj.h  histogram_view_qobj.qrc  histogram_zcent_view_qobj.cpp  histogram_zcent_view_qobj.h  histogram_zcent_view_qobj.qrc  image_view_qobj.cpp  image_view_qobj.h  image_view_qobj.ui  linechart_dual_view_qobj.cpp  linechart_dual_view_qobj.h  linechart_dual_view_qobj.qrc  linechart_view_qobj.cpp  linechart_view_qobj.h  linechart_view_qobj.qrc  multiple_heatmaps_view_qobj.cpp  multiple_heatmaps_view_qobj.h  multiple_heatmaps_view_qobj.ui  (+40 more)
(+185 files in other folders)
